@@ -1,0 +1,30 @@
+{
+  "event_id": "00000000000000000000000000000000",
+  "message": null,
+  "timestamp": "1970-01-01T00:00:00",
+  "level": null,
+  "logger": null,
+  "platform": null,
+  "culprit": null,
+  "tags": {},
+  "server_name": null,
+  "release": null,
+  "environment": null,
+  "extra": {},
+  "checksum": null,
+  "contexts":
+    {
+      "context1": {
+        "context1key1": "context1value1",
+        "context1key2": "context1value2"
+      },
+      "context2": {
+        "context2key1": "context2value1",
+        "context2key2": "context2value2"
+      }
+    },
+  "sdk": {
+    "name": null,
+    "version": null
+  }
+}
