@@ -4,6 +4,7 @@ Version 7.8.3
 - Add User to RavenContext and ContextBuilderHelper. (thanks mpecan)
 - Drop Events when the connection is locked down, users must enable buffering to attempt to resend later.
 - Respect the Sentry server's ``Retry-After`` header.
+- Add ``contexts`` field support to Events.
 
 Version 7.8.2
 -------------
